# lore-python

./: .loreignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  find_lorelib.py  pyproject.toml  setup.py
.crowd/: change_request_template.md
examples/: README.md  example-native.py  example.py
generator/: generate.py  registry.py
generator/common/: find_lorelib.py  generate.py  util.py  visitor.py
generator/templates/: args_types.ji  enum_types.ji  events_types.ji  fluent.ji  functions.ji  types.ji  utils.ji
lore/: __init__.py
perf/: repository_dump_perf.py
tests/: conftest.py  test_custom_types.py  test_custom_types_from_event_data_types.py  test_fluent.py  test_native.py
