[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

# Project metadata is defined in setup.py.

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "mypy>=2.1.0",
    "pycparser>=3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
log_cli = true
log_cli_level = "INFO"